--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "https://github.com/onedayitwillmake/RealtimeMultiplayerNodeJs.git"
   },
   "author": "Mario Gonzalez",
-  "license": "-",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/onedayitwillmake/RealtimeMultiplayerNodeJs/issues"
   },
